--- a/package.json
+++ b/package.json
@@ -9,24 +9,14 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.4.2",
-    "axios": "^0.18.0",
     "bcrypt": "^3.0.5",
-    "classnames": "^2.2.6",
-    "graphql": "^14.0.0",
     "history": "^4.7.2",
-    "immutable": "^3.4.0",
     "meteor-node-stubs": "^0.4.1",
     "react": "^16.8.4",
     "react-dom": "^16.5.0",
     "react-forms": "^1.0.0-rc6",
-    "react-redux": "^6.0.1",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "redux": "^4.0.1",
-    "simpl-schema": "^1.0.0",
-    "uniforms": "^1.31.1",
-    "uniforms-semantic": "^1.31.1",
-    "uniqid": "^5.0.3"
+    "react-router-dom": "^4.3.1"
   },
   "meteor": {
     "mainModule": {
