--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "testModule": "tests/main.js"
   },
   "devDependencies": {
-    "eslint": "^5.15.1",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^3.0.0",
     "eslint-plugin-react": "^7.12.4",
     "prettier": "^1.16.4"
   }
